@@ -5,8 +5,8 @@ CPP_getSpecialValues <- function(gdxName, sysDir) {
     .Call(`_gamstransfer_CPP_getSpecialValues`, gdxName, sysDir)
 }
 
-CPP_gdxWriteSuper <- function(data, sysDir, fileName, uel_priority, is_uel_priority, compress) {
-    invisible(.Call(`_gamstransfer_CPP_gdxWriteSuper`, data, sysDir, fileName, uel_priority, is_uel_priority, compress))
+CPP_gdxWriteSuper <- function(data, enable, sysDir, fileName, uel_priority, is_uel_priority, compress) {
+    invisible(.Call(`_gamstransfer_CPP_gdxWriteSuper`, data, enable, sysDir, fileName, uel_priority, is_uel_priority, compress))
 }
 
 CPP_readSuper <- function(symNames, gdxName, sysDir, records, symisnull) {
