@@ -5,6 +5,7 @@ GAMS Transfer R
 - `findDuplicateRecords` now returns a data frame instead of row indices
 - Breaking: `Container` `data` field is now an ordered dictionary from `collections` package instead of named list. Instead of `m$data$<symbolname>`, use `m[<symbolname>]`.
 - performance improvement to `Container` method `hasSymbols`. This results in significant speed-ups when adding multiple symbols to the Container.
+- added `symbols` argument to `Container` method `write` to support partial writing
 
 GAMS Transfer R v1.6.0
 ==================
